crates/nirvash-macros/tests/fixtures/code_tests_legacy_context.stderr
error: context = ... is no longer supported; use binding = ... and implement context() on ProtocolRuntimeBinding<Spec>
   --> tests/fixtures/code_tests_legacy_context.rs:118:68
    |
118 | #[code_tests(spec = Spec, binding = Binding, init = initial_state, context = tests::driver_context)]
    |                                                                    ^^^^^^^
